# stickers

./: pyproject.toml
src/: database.py  main.py
src/stickers/: api.py  repositories.py  schemas.py  services.py
