[tool.poetry]
name = "myfast"
version = "0.1.0"
description = ""
authors = ["Alan Rizzo <alan.rizzo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.94.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.7"}
loguru = "^0.6.0"
asyncpg = "^0.27.0"
uvicorn = "^0.21.1"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
